--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 @layer base {
   body {
-    @apply font-secondary bg-pink-800 text-gray-200;
+    @apply font-secondary bg-pink-700 text-gray-200 text-xs md:text-sm lg:text-base;
   }
   h1 {
     @apply font-primary font-bold text-6xl;
@@ -28,17 +28,11 @@
   h6 {
     @apply font-primary text-lg font-semibold;
   }
-  p {
-    @apply font-secondary text-xs lg:text-sm;
-  }
-  span {
-    @apply font-secondary text-xs lg:text-sm font-bold;
-  }
 }
 
 @layer components {
   .btn {
-    @apply font-secondary px-4 py-2 rounded transition-all cursor-pointer inline-flex items-center justify-center text-sm;
+    @apply font-secondary px-4 py-2 rounded transition-all cursor-pointer inline-flex items-center justify-center;
   }
   .btn-primary {
     @apply bg-red-700 text-gray-200 hover:bg-red-400 border-white border;
